# tracing-otel-extra

./: .env.example  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/axum-otel/: CHANGELOG.md  Cargo.toml
crates/axum-otel/src/: lib.rs  make_span.rs  on_failure.rs  on_response.rs
crates/axum-otel/tests/: integration.rs
crates/otel-init/: CHANGELOG.md  Cargo.toml  README.md
crates/otel-init/src/: guard.rs  lib.rs  otel.rs  resource.rs  subscriber.rs
crates/tracing-opentelemetry/: CHANGELOG.md  Cargo.toml  README.md
crates/tracing-opentelemetry/src/: guard.rs  lib.rs  macros.rs  otel.rs  resource.rs
crates/tracing-otel/: CHANGELOG.md  Cargo.toml  README.md
crates/tracing-otel/src/: lib.rs  macros.rs
crates/tracing-otel/src/http/: fields.rs  span.rs
crates/tracing-otel/src/logger/: config.rs  env.rs  guard.rs  init.rs  mod.rs  subscriber.rs
crates/tracing-otel/src/trace/: context.rs  fields.rs
examples/microservices/articles/: Cargo.toml
examples/microservices/articles/src/: main.rs
examples/microservices/users/: Cargo.toml
examples/microservices/users/src/: main.rs
examples/otel/: Cargo.toml
examples/otel/src/: main.rs
