[package]
name = "axum-otel"
version = "0.29.5"
edition = "2021"
description = "OpenTelemetry tracing for axum."
license = "MIT/Apache-2.0"
repository = "https://github.com/iamnivekx/axum-otel"
documentation = "https://docs.rs/axum-otel/"
readme = "README.md"
authors = ["nivek <h49987180@gmail.com>"]

[dependencies]
axum = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry-otlp = { workspace = true }
