[package]
name = "otel-init"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
description = "OpenTelemetry provider and subscriber initialization with lifecycle management."
documentation = "https://docs.rs/otel-init"
homepage = "https://github.com/nivek-ph/tracing-otel-extra/tree/main/crates/otel-init"
repository = "https://github.com/nivek-ph/tracing-otel-extra/tree/main/crates/otel-init"
readme = "README.md"
keywords = ["tracing", "opentelemetry"]

[features]
subscriber = ["dep:tracing-subscriber", "dep:opentelemetry-appender-tracing"]

[dependencies]
anyhow = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }

tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
