[package]
name = "tracing-otel-extra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
description = "Bootstrap utilities for tracing and OpenTelemetry integration."
documentation = "https://docs.rs/tracing-otel-extra"
homepage = "https://github.com/nivek-ph/tracing-otel-extra/tree/main/crates/tracing-otel"
repository = "https://github.com/nivek-ph/tracing-otel-extra/tree/main/crates/tracing-otel"
readme = "README.md"
keywords = ["tracing", "opentelemetry", "logging"]

[features]
default = []

# Field extraction.
fields = ["dep:http"]
macros = ["dep:tracing"]

# HTTP context propagation and span creation.
http = ["fields", "dep:http", "dep:opentelemetry", "dep:opentelemetry-http"]
context = ["http", "dep:tracing", "dep:tracing-opentelemetry"]
span = ["context", "macros"]

# OpenTelemetry provider/subscriber bootstrap.
otel = ["dep:tracing-opentelemetry-extra"]

# Opinionated application logging/bootstrap facade.
logger = [
	"otel",
	"dep:opentelemetry",
	"dep:tracing",
	"dep:tracing-appender",
	"dep:tracing-subscriber",
	"tracing-opentelemetry-extra/subscriber",
]
env = ["dep:config", "logger"]

[dependencies]
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

http = { workspace = true, optional = true }

# opentelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# tracing and tracing-opentelemetry
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry-extra = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["json"], optional = true }

config = { workspace = true, optional = true }

[dev-dependencies]
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
