[package]
name = "articles-service"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum-otel = { workspace = true }
tracing-otel-extra = { workspace = true, features = ["env"] }

anyhow = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id"] }
tracing = { workspace = true }

reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
